--- a/front-end/sass/__footer.scss
+++ b/front-end/sass/__footer.scss
@@ -1,15 +1,15 @@
 @import "./_variables/";
 
 footer {
+    display: flex;
+    justify-content: center;
     width: 100%;
     color: $primary;
     background-color: $secondary;
-    padding-top: 15px;
-    padding-left: 18px;
-    padding-bottom: 15px;
     a {
     text-decoration: none;
     color: $primary;
+    margin-left: 2px;
     margin-bottom: 3px;
     &:hover {
         color: $tertiary;
@@ -19,4 +19,7 @@ footer {
 .footer_column {
     display: flex;
     flex-direction: column;
+    :nth-child(2){
+        padding-left: 5px;
+    }
 }
