--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -13,7 +13,6 @@ body {
       -ms-flex-flow: row wrap;
           flex-flow: row wrap;
   width: 100%;
-  height: auto;
 }
 
 .row a {
@@ -34,6 +33,32 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-flow: row wrap;
           flex-flow: row wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: 100%;
+}
+
+.cameras .col-fr {
+  border: 1px dotted #e8e5e5;
+  max-width: 30%;
+  min-height: 435px;
+  border-radius: 20px 20px;
+  background-color: black;
+  color: #ffc107;
+  margin: 5px 2px;
+}
+
+.cameras .col-fr img {
+  width: 100%;
+  height: 65%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 20px 20px 0 0;
+}
+
+.cameras .col-fr p, .cameras .col-fr h3 {
+  color: #ffc107;
+  text-align: center;
 }
 
 h2 {
@@ -42,38 +67,6 @@ h2 {
   text-align: center;
   color: #ffc107;
   padding-bottom: 2px;
-}
-
-.col-sm {
-  border: 1px dotted #e8e5e5;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  min-width: 30%;
-  min-height: 435px;
-  border-radius: 20px 20px 0 0;
-  background-color: black;
-  color: #ffc107;
-  margin: 0 2px;
-}
-
-.col-sm img {
-  width: 100%;
-  height: 65%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  border-radius: 20px 20px 0 0;
-}
-
-.col-sm p, .col-sm h3 {
-  color: #ffc107;
-  text-align: center;
 }
 
 .col-md {
@@ -211,7 +204,7 @@ h2 {
 }
 
 @media screen and (max-width: 1000px) {
-  .col-sm {
+  .col-fr {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
