--- a/front-end/sass/__accueil.scss
+++ b/front-end/sass/__accueil.scss
@@ -9,7 +9,6 @@ body {
     display: flex;
     flex-flow: row wrap;
     width: 100%;
-    height: auto;
     a {
         text-decoration: none;
         color: $primary;
@@ -22,7 +21,27 @@ body {
     background-color: $primary;
     display: flex;
     flex-flow: row wrap;
-
+    justify-content: space-around;
+    width: 100%;
+    .col-fr {
+      border: 1px dotted $tertiary;
+      max-width: 30%;
+      min-height: 435px;
+      border-radius: 20px 20px;
+      background-color: $primary;
+      color: $secondary;
+      margin: 5px 2px;
+      img {
+          width: 100%;
+          height: 65%;
+          object-fit: cover;
+          border-radius: 20px 20px 0 0;
+      }
+      p, h3 {
+          color: $secondary;
+          text-align: center;
+      }
+  }
 }
 
 h2 {
@@ -30,31 +49,9 @@ h2 {
     border: 1px dotted $tertiary;
     text-align: center;
     color: $secondary;
-    //margin-bottom: 0;
     padding-bottom: 2px;
 }
-.col-sm {
-    border: 1px dotted $tertiary;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    min-width: 30%;
-    min-height: 435px;
-    border-radius: 20px 20px 0 0;
-    background-color: $primary;
-    color: $secondary;
-    margin: 0 2px;
-    img {
-        width: 100%;
-        height: 65%;
-        object-fit: cover;
-        border-radius: 20px 20px 0 0;
-    }
-    p, h3 {
-        color: $secondary;
-        text-align: center;
-    }
-}
+
 .col-md {
     border-radius: 20px 20px 0 0;
     width: 100%;
@@ -149,7 +146,7 @@ h2 {
   //.text-center {
   
 @media screen and (max-width: 1000px) {
-    .col-sm {
+    .col-fr {
         display: flex;
         min-width: 33%;
     }
